--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -15,7 +15,7 @@
                     <span>
                        You have <strong>100</strong> SheIn Points now, which can be used in your next purchase.
                     </span>
-                  </p><p style="margin: 0px;">Want to be a <strong style="color: rgb(0, 0, 0);">VIP</strong>? <a style="color: rgb(0, 0, 0); text-decoration: underline;" href="https://www.shein.com/index.php?model=member_article&amp;action=shein_class">Join new SheIn Membership</a> to get <strong> FREE coupons</strong> !</p>
+                  </p><p style="margin: 0px;">Want to be a <strong style="color: rgb(0, 0, 0);">VIP</strong>? <a style="color: rgb(0, 0, 0); text-decoration: underline;" href="#">Join new SheIn Membership</a> to get <strong> FREE coupons</strong> !</p>
                   <p></p>
                 </div>
               </div>
@@ -29,7 +29,7 @@
                   <div class="con-right-p">
                     <ol>
                       <li class="center-fir">
-                        Use in your purchase, <a href="http://www.shein.com/?icn=erasepoints&amp;ici=www_myaccount&amp;url_from=wwwerasepointsmyaccount">SHOP NOW </a>&gt;
+                        Use in your purchase, <a href="#">SHOP NOW </a>&gt;
                       </li>
                       <!--  暂时废弃
                           <li>2. Use 10 points exchanges discounts, <a href='http://www.shein.com/in-it-to-win-it.html?icn=inittowinit&ici=www_myaccount&url_from=wwwinittowinitrightlink'>right here </a>></li>
@@ -43,7 +43,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=account_setting"> Account Setting</a></h5>
+                <h5 class="item-title"><a href="#"> Account Setting</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Update your email address and we’ll serve you better in the future with personal shopping assistance.</p>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=member_order">My Orders</a></h5>
+                <h5 class="item-title"><a href="#">My Orders</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">What you bought are all here, you can check them at anytime.</p>
@@ -61,7 +61,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=account&amp;action=address">My Address Book</a></h5>
+                <h5 class="item-title"><a href="#">My Address Book</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Create and store shipping addresses for easy access any time you're signed in at SheIn.com.</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=account_setting&amp;action=password">Edit Password</a></h5>
+                <h5 class="item-title"><a href="#">Edit Password</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">To keep your account safe that you can edit your password, make it easy to be remembered! We recommend you do it and it won’t  take you long.</p>
@@ -79,7 +79,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=lookbook&amp;action=image_upload">Style Gallery</a></h5>
+                <h5 class="item-title"><a href="#">Style Gallery</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Upload and share your looks with millions of SheIners.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=free_trial&amp;action=report_list_upload">Free Trial Report</a></h5>
+                <h5 class="item-title"><a href="#">Free Trial Report</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Upload your free trial expericence.</p>
@@ -97,7 +97,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=wishlist">My Wishlist</a></h5>
+                <h5 class="item-title"><a href="#">My Wishlist</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Keep tracking of what you want.</p>
@@ -105,11 +105,11 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="https://www.shein.com/index.php?model=member_point">Bonus Point Program</a></h5>
+                <h5 class="item-title"><a href="#">Bonus Point Program</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Share links to earn SheIn bonus points<br>
-                  <a href="http://www.shein.com/bonus-point-program-a-371.html">click here to learn more.</a>
+                  <a href="#">click here to learn more.</a>
                 </p>
               </div>
             </div>
@@ -117,7 +117,7 @@
         </ul>
         <div class="con-foot">
           <div style="text-align: center;">
-            <a class="she-btn-white j-member-accout-signout" href="{{ logout }}">Sign out</a>
+            <a class="she-btn-white j-member-accout-signout" href="index.php?route=account/logout">Sign out</a>
           </div>
           <div class="con-foot-p">
             <p style="margin-top: 10px;">It’s better to sign out after you finish your shopping so that you could make sure that your account safe.</p>
