--- a/catalog/view/theme/default/template/account/order_list.twig
+++ b/catalog/view/theme/default/template/account/order_list.twig
@@ -93,3 +93,8 @@
   </div>
 </div>
 {{ footer }}
+<script>
+    $(function () {
+        $('.j-member-orders').addClass('area');
+    });
+</script>
