--- a/catalog/view/theme/default/template/account/password.twig
+++ b/catalog/view/theme/default/template/account/password.twig
@@ -38,3 +38,8 @@
   </div>
 </div>
 {{ footer }}
+<script>
+    $(function () {
+        $('.j-member-password').addClass('area');
+    });
+</script>
