--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -8,14 +8,14 @@
     <nav class="she-side-nav">
         <h3 class="she-title j-side-title"> <a class="j-my-accout" href="index.php?route=account/account" style="color: rgb(34, 34, 34);">My ACCOUNT </a> </h3>
         <ul>
-            <li> <a class=" area j-member-accout" href="index.php?route=account/edit">Account Setting </a> </li>
+            <li> <a class="j-member-edit" href="index.php?route=account/edit">Account Setting </a> </li>
             <li> <a class="j-member-orders" href="index.php?route=account/order">My Orders</a> </li>
             <li> <a class="ga-tk-list-my-tickets j-member-ticket " href=""> My Tickets <span id="ticket_menu_num" class="red_num"></span> </a> </li>
             <li> <a class=" j-member-payment" href=""> My Payment Options </a> </li>
             <li> <a class=" j-member-wallet" href="index.php?route=account/transaction"> My Wallet </a> </li>
             <li> <a class=" j-member-mymeasurement" href=""> My Measurements </a> </li>
             <li> <a class=" j-member-shein" href=""> SheIn Membership</a> </li>
-            <li> <a class=" j-member-address" href=""> Address Book </a> </li>
+            <li> <a class=" j-member-address" href="index.php?route=account/address"> Address Book </a> </li>
             <li> <a class=" j-member-password" href="index.php?route=account/password"> Edit Password </a> </li>
             <li> <a class=" j-member-styleGallery" href=""> Style Gallery </a> </li>
             <li> <a class=" j-member-report" href=""> Free Trial Report </a> </li>
@@ -25,3 +25,4 @@
         </ul>
     </nav>
 </div>
+
